# test

./: CMakeLists.txt  Project-Decisions.md  Roadmap.md  savol_1_javob.md  savol_2_javob.md  statement.md
.claude/commands/: brainstorming.md
src/: main.cpp
src/archive/: Archive.cpp  Archive.hpp  Compressor.cpp  Compressor.hpp  FileEntry.hpp
src/utils/: CRC32.cpp  CRC32.hpp  FileUtils.cpp  FileUtils.hpp
tests/: test_basic.cpp
